--- a/react-hello-world/public/index.html
+++ b/react-hello-world/public/index.html
@@ -2,33 +2,17 @@
 <html lang="en">
   <head>
     <style>
-      #Heading {
-        color: pink;
-      }
-      .cool-text {
-        font-family: "Arial";
-      }
       body {
         background-color: #252424;
       }
       #root {
         display: inline-block;
       }
-      .user-card {
-        transition: all .2s;
-      }
-      .user-card:hover {
-        box-shadow: 0 0 1rem teal;
-      }
-      .user-card a:link,
-      .user-card a:visited {
-        color: #ccc;
-        text-decoration: none;
-      }
-      .user-card a:hover {
-        color: teal;
-      }
     </style>
+      <!-- Fonts to support Material Design -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
+  <!-- Icons to support Material Design -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" />
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
